--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <title>Vite + Vue + TS</title>
+  <title>One Check</title>
 </head>
 
 <body>
